add notification and navigation components and icons and images resources

--- a/assets/styles/sass/lib/_variables.scss
+++ b/assets/styles/sass/lib/_variables.scss
@@ -3,3 +3,21 @@
  * =================================
  */
 
+$color-brand: #EBA904;
+
+$color-black: #000;
+$color-darkgray: #050505;
+$color-gray: #666666;
+$color-lightgray: #F2F2F2;
+$color-white: #FFF;
+
+// Textures 
+$color-info:  #EBA904;
+$color-border: #EAE8E8;
+
+// Typography
+$base-font: 'Poppins', sans-serif;
+$base-font-size: 14px;
+
+$button-color: $color-black;
+$button-border-color: $color-brand;
