add main static slide of brand and add main recipe sections and modified variables also icluded links styles

--- a/assets/styles/sass/lib/_variables.scss
+++ b/assets/styles/sass/lib/_variables.scss
@@ -21,3 +21,9 @@ $base-font-size: 14px;
 
 $button-color: $color-black;
 $button-border-color: $color-brand;
+
+// Links
+$color-link-default: $color-black;
+$color-link-visited: $color-black;
+$color-link-hover: $color-brand;
+$color-link-active: $color-brand;
