--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -21,6 +21,64 @@ body {
   margin: 0;
 }
 
+main {
+  width: 100%;
+  height: auto;
+}
+
+/**
+ * Typography styling
+ * =================================
+ */
+h1, h2 {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 97%;
+  color: #050505;
+}
+
+h2 {
+  font-weight: normal;
+  font-size: 24px;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  color: #666666;
+}
+
+/**
+ * Links
+ * =================================
+ */
+a {
+  -webkit-transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
+  transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+a, a:link {
+  color: #000;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover, a:focus {
+  color: #EBA904;
+}
+
+a:active {
+  color: #EBA904;
+}
+
 /**
  * Navbar
  * =================================
@@ -52,13 +110,7 @@ body {
 }
 
 .nav__links a {
-  color: #000;
-  text-decoration: none;
   margin: 20px;
-}
-
-.nav__links a:hover {
-  color: #EBA904;
 }
 
 .nav__icons {
@@ -102,5 +154,98 @@ body {
   font-weight: normal;
   font-size: 12px;
   color: #F2F2F2;
+}
+
+.main__slide {
+  width: 100%;
+  height: auto;
+  padding-top: 30px;
+  text-align: center;
+}
+
+.main__slide img {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.main__slide--promo {
+  margin: 0 auto;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.main__slide--promo img {
+  width: 100%;
+}
+
+/**
+ * Recipe styling
+ * =================================
+ */
+.main__recipe {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main__recipe--container {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main__recipe--image {
+  width: 50%;
+}
+
+.main__recipe--details {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main__recipe--details h1 {
+  padding-bottom: 70px;
+}
+
+.main__recipe--details h2 {
+  padding-bottom: 40px;
+}
+
+.main__recipe--details p {
+  padding-bottom: 10px;
+  width: 80%;
+}
+
+.btn {
+  margin-top: 20px;
+  width: 200px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.btn a {
+  text-transform: uppercase;
+}
+
+.btn hr {
+  width: 35px;
+  border: solid 1px #EBA904;
+  background-color: #EBA904;
 }
 /*# sourceMappingURL=style.css.map */
