--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -7,7 +7,9 @@
 
 // Components
 @import "components/links";
+@import "components/buttons";
 @import "components/navbar";
 @import "components/notification";
 @import "components/slide";
 @import "components/recipe";
+@import "components/products";
