add accordion component and fetch data from rickandmortyapi

--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -13,3 +13,5 @@
 @import "components/slide";
 @import "components/recipe";
 @import "components/products";
+@import "components/accordion";
+@import "components/person";
