--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -51,6 +51,7 @@ p {
   font-size: 14px;
   color: #666666;
   line-height: 1.4;
+  margin-top: 20px;
 }
 
 /**
@@ -80,6 +81,10 @@ a:active {
   color: #EBA904;
 }
 
+/**
+ * Buttons styling
+ * =================================
+ */
 .btn {
   margin-top: 20px;
   width: 200px;
@@ -378,5 +383,128 @@ a:active {
 
 .slick-dots li.slick-active img:nth-child(2) {
   display: block;
+}
+
+/**
+ * Accordion styling
+ * =================================
+ */
+.container__items {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 200px;
+}
+
+.row {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.accordion {
+  width: 40%;
+  display: block;
+}
+
+.card {
+  margin-bottom: 20px;
+  float: left;
+  width: 100%;
+}
+
+.card-header h3 {
+  cursor: pointer;
+  color: #050505;
+  position: relative;
+  border-bottom: 1px solid #EAE8E8;
+  margin: 0;
+  padding: 15px 0;
+  font-size: 30px;
+}
+
+.card-header {
+  position: relative;
+}
+
+.card-header span {
+  position: absolute;
+  right: 20px;
+  top: 12px;
+  height: 25px;
+  width: 25px;
+  color: #050505;
+  background-color: #ffffff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 25px;
+  font-size: 13px;
+}
+
+.card__body {
+  margin-top: 5px;
+}
+
+.card__body {
+  display: none;
+}
+
+.card:nth-child(1) .card__body {
+  display: block;
+}
+
+.card__body p {
+  font-size: 15px;
+  line-height: 24px;
+  color: #444444;
+}
+
+.person {
+  width: 55%;
+}
+
+.person h3 {
+  font-weight: 600;
+  font-size: 30px;
+  padding: 20px 0;
+}
+
+.person__details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+#avatar {
+  width: 50%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#person__info {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  word-wrap: break-word;
+}
+
+#person__info p {
+  font-weight: 600;
+  font-size: 18px;
+  color: #050505;
 }
 /*# sourceMappingURL=style.css.map */
