--- a/assets/styles/sass/components/_products.scss
+++ b/assets/styles/sass/components/_products.scss
@@ -1,16 +1,18 @@
 .products__slides {
     width: 100%;
+    padding-bottom: 100px;
     display: flex;
     justify-content: center;
-    padding-bottom: 200px;
+    
 }
 
-.products__slides {
-    width: 100%;
+.products__wrapper {
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 50px;
 }
 
 .products__container {
@@ -45,7 +47,7 @@
 .prev__arrow {
     position: relative;
     top: -40px;
-    left: 93%;
+    left: 88%;
     text-align: center;
     width: 40px;
     margin-left: 10px;
@@ -55,7 +57,7 @@
 .next__arrow {
     position: absolute;
     top: -40px;
-    left: 90%;
+    left: 75%;
     text-align: center;
     width: 40px;
     cursor: pointer;
