--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -133,6 +133,10 @@ a:active {
   height: 90px;
 }
 
+.nav__links {
+  display: none;
+}
+
 .nav__links a {
   margin: 20px;
 }
@@ -223,14 +227,22 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .main__recipe--image {
-  width: 50%;
+  width: 100%;
+}
+
+.main__recipe--image img {
+  width: 100%;
 }
 
 .main__recipe--details {
-  width: 50%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,17 +270,17 @@ a:active {
 
 .products__slides {
   width: 100%;
+  padding-bottom: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 200px;
 }
 
-.products__slides {
-  width: 100%;
+.products__wrapper {
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -282,6 +294,7 @@ a:active {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-top: 50px;
 }
 
 .products__container {
@@ -327,7 +340,7 @@ a:active {
 .prev__arrow {
   position: relative;
   top: -40px;
-  left: 93%;
+  left: 88%;
   text-align: center;
   width: 40px;
   margin-left: 10px;
@@ -337,7 +350,7 @@ a:active {
 .next__arrow {
   position: absolute;
   top: -40px;
-  left: 90%;
+  left: 75%;
   text-align: center;
   width: 40px;
   cursor: pointer;
@@ -401,17 +414,15 @@ a:active {
 
 .row {
   width: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
 .accordion {
-  width: 40%;
+  width: 100%;
   display: block;
+  margin-bottom: 500px;
 }
 
 .card {
@@ -454,7 +465,6 @@ a:active {
 
 .card-body p {
   margin-top: 20px;
-  color: blue;
 }
 
 .card-body {
@@ -472,7 +482,7 @@ a:active {
 }
 
 .person {
-  width: 55%;
+  width: 100%;
 }
 
 .person h3 {
@@ -485,17 +495,21 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
 }
 
 #avatar {
-  width: 50%;
+  width: 100%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
 #person__info {
-  width: 50%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
