--- a/assets/styles/sass/components/_recipe.scss
+++ b/assets/styles/sass/components/_recipe.scss
@@ -13,13 +13,18 @@
 .main__recipe--container {
     width: 90%;
     display: flex;
+    flex-direction: column;
 }
 
 .main__recipe--image {
-    width: 50%;
+    width: 100%;
+    
+    img {
+        width: 100%;
+    }
 }
 .main__recipe--details {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
