--- a/assets/styles/sass/components/person.scss
+++ b/assets/styles/sass/components/person.scss
@@ -1,5 +1,5 @@
 .person {
-    width: 55%;
+    width: 100%;
     h3 {
         font-weight: 600;
         font-size: 30px;
@@ -9,14 +9,15 @@
 
 .person__details {
     display: flex;
+    flex-direction: column;
     width: 100%;
 }
 #avatar {
-    width: 50%;
+    width: 100%;
     flex-wrap: wrap;
 }
 #person__info {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     word-wrap: break-word;
