--- a/assets/styles/sass/components/_accordion.scss
+++ b/assets/styles/sass/components/_accordion.scss
@@ -11,7 +11,6 @@
 }
 .row {
 	width: 90%;
-	justify-content: space-between;
 	
 }
 .accordion {
@@ -70,4 +69,16 @@
 	font-size: 15px;
 	line-height: 24px;
 	color:#444444;
+}
+
+
+@media screen and (min-width: 1024px){
+	.row {
+		display: flex;
+		justify-content: space-between;
+	}
+	.accordion {
+		width: 40%;
+		margin-bottom: 20px;
+	}
 }
