--- a/assets/styles/sass/components/_navbar.scss
+++ b/assets/styles/sass/components/_navbar.scss
@@ -35,7 +35,10 @@
     }
 }
 
-// Responsive design
-@media screen and (min-width: 640px){
 
+@media screen and (min-width: 1024px) {
+    .nav__links {
+        display: initial;
+    }
+    
 }
